--- a/LMT/scripts/SetGenotype.ipynb
+++ b/LMT/scripts/SetGenotype.ipynb
@@ -19,18 +19,26 @@
      "output_type": "stream",
      "text": [
       "---------------\n",
-      "Current file:  C:/Users/Fab/Desktop/20180110_validation_2_ind_Experiment_0044_e.sqlite\n",
+      "Current file:  C:/Users/Fab/Desktop/Experiment 8466.sqlite\n",
       "Loading animals.\n",
-      "Fields available in lmtanalysis:  ['ID', 'RFID', 'GENOTYPE', 'NAME', 'AGE', 'SEX', 'STRAIN']\n",
-      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE,AGE,SEX,STRAIN FROM ANIMAL ORDER BY GENOTYPE\n",
-      "Animal Id:1 Name:A RFID:000004395665 Genotype:WT User1:None\n",
-      "Animal Id:2 Name:B RFID:000004395708 Genotype:WT User1:None\n",
+      "Fields available in lmtanalysis:  ['ID', 'RFID', 'GENOTYPE', 'NAME']\n",
+      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE FROM ANIMAL ORDER BY GENOTYPE\n",
+      "Animal Id:1 Name:A RFID:000004724298 Genotype:wt User1:None\n",
+      "Animal Id:2 Name:B RFID:000004724371 Genotype:wt User1:None\n",
+      "Animal Id:3 Name:C RFID:000004724516 Genotype:wt User1:None\n",
+      "Animal Id:4 Name:D RFID:000004724223 Genotype:wt User1:None\n",
       "****\n",
-      "Type new genotype for RFID 000004395665 Current Genotype: WT ([Enter] to keep existing one):\n",
-      "keeping genotype WT\n",
+      "Type new genotype for RFID 000004724298 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
       "****\n",
-      "Type new genotype for RFID 000004395708 Current Genotype: WT ([Enter] to keep existing one):\n",
-      "keeping genotype WT\n",
+      "Type new genotype for RFID 000004724371 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
+      "****\n",
+      "Type new genotype for RFID 000004724516 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
+      "****\n",
+      "Type new genotype for RFID 000004724223 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
       "Genotype saved in database.\n"
      ]
     }
