add the alter table metadata

--- a/LMT/scripts/Rebuild all events.ipynb
+++ b/LMT/scripts/Rebuild all events.ipynb
@@ -1211,6 +1211,20 @@
     "    \n",
     "    connection = sqlite3.connect( file )\n",
     "    \n",
+    "    # update missing fields\n",
+    "    try:\n",
+    "        connection = sqlite3.connect( file )    \n",
+    "        c = connection.cursor()            \n",
+    "        query = \"ALTER TABLE EVENT ADD METADATA TEXT\";\n",
+    "        c.execute( query )    \n",
+    "        connection.commit()\n",
+    "        c.close()\n",
+    "        connection.close()\n",
+    "    except:\n",
+    "        print( \"METADATA field already exists\" , file )\n",
+    "        \n",
+    "    #build index\n",
+    "    \n",
     "    BuildDataBaseIndex.buildDataBaseIndex( connection, force=False )\n",
     "        \n",
     "    '''\n",
