fix minor errors with new metadata on events

--- a/LMT/scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb
+++ b/LMT/scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
@@ -216,8 +214,10 @@
     "        col=0\n",
     "        row+=1\n",
     "    \n",
-    "    fig.tight_layout()    \n",
-    "    fig.savefig( \"FigProfile{}_Events_night_{}.pdf\".format( valueCat, night ) ,dpi=100)\n",
+    "    fig.tight_layout()\n",
+    "    figFileName = \"FigProfile{}_Events_night_{}.pdf\".format( valueCat, night )\n",
+    "    print(\"Saving \" , figFileName )\n",
+    "    fig.savefig( figFileName ,dpi=100)\n",
     "    plt.close( fig )\n",
     "    \n",
     "\n",
@@ -303,11 +303,12 @@
     "        text_file.write( \"Statistical analysis: mixed linear models\" )\n",
     "        text_file.write( \"{}\\n\" )\n",
     "        #Test profile data and save results in a text file\n",
+    "        '''\n",
     "        testProfileData(profileData=profileData, night=n, eventListNames=behaviouralEventOneMouse[:-2], valueCat=\" TotalLen\", text_file=text_file)\n",
     "        testProfileData(profileData=profileData, night=n, eventListNames=behaviouralEventOneMouse[:-2], valueCat=\" Nb\", text_file=text_file)\n",
     "        print(\"test for total distance\")\n",
     "        testProfileData(profileData=profileData, night=n, eventListNames=[\"totalDistance\"], valueCat=\"\", text_file=text_file)\n",
-    "    \n",
+    "        '''\n",
     "            \n",
     "    else:\n",
     "        nightEventTimeLine = EventTimeLineCached( connection, file, \"night\", minFrame=tmin, maxFrame=tmax )\n",
@@ -323,11 +324,12 @@
     "            text_file.write( \"Statistical analysis: mixed linear models\" )\n",
     "            text_file.write( \"{}\\n\" )\n",
     "            #Test profile data and save results in a text file\n",
+    "            '''\n",
     "            testProfileData(profileData=profileData, night=n, eventListNames=behaviouralEventOneMouse[:-2], valueCat=\" TotalLen\", text_file=text_file)\n",
     "            testProfileData(profileData=profileData, night=n, eventListNames=behaviouralEventOneMouse[:-2], valueCat=\" Nb\", text_file=text_file)\n",
     "            print(\"test for total distance\")\n",
     "            testProfileData(profileData=profileData, night=n, eventListNames=[\"totalDistance\"], valueCat=\"\", text_file=text_file)\n",
-    "            \n",
+    "            '''\n",
     "            n+=1\n",
     "            \n",
     "    \n",
