--- a/LMT/scripts/SetGenotype.ipynb
+++ b/LMT/scripts/SetGenotype.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,26 +19,26 @@
      "output_type": "stream",
      "text": [
       "---------------\n",
-      "Current file:  D:/20170925_Shank2_Experiment_8269 processed.sqlite\n",
+      "Current file:  C:/Users/Fab/Desktop/Experiment 8466.sqlite\n",
       "Loading animals.\n",
-      "Fields available in lmtanalysis:  ['ID', 'RFID', 'NAME', 'GENOTYPE', 'IND']\n",
-      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE,IND FROM ANIMAL ORDER BY GENOTYPE\n",
-      "Animal Id:1 Name:A RFID:000004395909 Genotype:KO User1:KO1\n",
-      "Animal Id:4 Name:D RFID:000004395810 Genotype:KO User1:KO2\n",
-      "Animal Id:2 Name:B RFID:000004395685 Genotype:WT User1:WT1\n",
-      "Animal Id:3 Name:C RFID:000004395945 Genotype:WT User1:WT2\n",
+      "Fields available in lmtanalysis:  ['ID', 'RFID', 'GENOTYPE', 'NAME']\n",
+      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE FROM ANIMAL ORDER BY GENOTYPE\n",
+      "Animal Id:1 Name:A RFID:000004724298 Genotype:wt User1:None\n",
+      "Animal Id:2 Name:B RFID:000004724371 Genotype:wt User1:None\n",
+      "Animal Id:3 Name:C RFID:000004724516 Genotype:wt User1:None\n",
+      "Animal Id:4 Name:D RFID:000004724223 Genotype:wt User1:None\n",
       "****\n",
-      "Type new genotype for RFID 000004395909 Current Genotype: KO ([Enter] to keep existing one):\n",
-      "keeping genotype KO\n",
+      "Type new genotype for RFID 000004724298 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
       "****\n",
-      "Type new genotype for RFID 000004395810 Current Genotype: KO ([Enter] to keep existing one):\n",
-      "keeping genotype KO\n",
+      "Type new genotype for RFID 000004724371 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
       "****\n",
-      "Type new genotype for RFID 000004395685 Current Genotype: WT ([Enter] to keep existing one):\n",
-      "keeping genotype WT\n",
+      "Type new genotype for RFID 000004724516 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
       "****\n",
-      "Type new genotype for RFID 000004395945 Current Genotype: WT ([Enter] to keep existing one):\n",
-      "keeping genotype WT\n",
+      "Type new genotype for RFID 000004724223 Current Genotype: wt ([Enter] to keep existing one):\n",
+      "keeping genotype wt\n",
       "Genotype saved in database.\n"
      ]
     }
@@ -93,6 +93,15 @@
     "    \n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
