--- a/LMT/scripts/Rebuild all events.ipynb
+++ b/LMT/scripts/Rebuild all events.ipynb
@@ -1090,7 +1090,7 @@
     "import matplotlib.pyplot as plt\n",
     "from lmtanalysis.Event import *\n",
     "from lmtanalysis.Measure import *\n",
-    "from lmtanalysis.Utils import getAllEvents\n",
+    "from lmtanalysis.Util import getAllEvents\n",
     "from lmtanalysis import BuildEventTrain3, BuildEventTrain4, BuildEventTrain2, BuildEventFollowZone, BuildEventRear5, BuildEventFloorSniffing,\\\n",
     "    BuildEventSocialApproach, BuildEventSocialEscape, BuildEventApproachContact,BuildEventOralOralContact,\\\n",
     "    BuildEventApproachRear, BuildEventGroup2, BuildEventGroup3, BuildEventGroup4, BuildEventOralGenitalContact, \\\n",
